refactor of the url prefix for clarity + adequate routes(changed name) and app/__init__.py homepage changes

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,7 +17,7 @@
     <header>
         <h1>YourHub Dashboard</h1>
         <nav>
-            <a href="/tasks/">Tasks</a> |
+            <a href="/hub/tasks">Tasks</a> |
             <s><a href="#" >Notes</a></s> |
             <s><a href="#">Timer</a></s>
         </nav>
