--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YourHub 🚀</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <script>
+        const savedTheme = localStorage.getItem("theme");
+        if (savedTheme){
+            document.documentElement.setAttribute('data-theme', savedTheme)
+        }
+    </script>
 </head>
 <body>
     <div id="darkmode-menu">
