--- a/app/templates/focus_mode.html
+++ b/app/templates/focus_mode.html
@@ -16,7 +16,7 @@
     </div>
 
     <div>
-        <a href="{{ url_for('hub.list_tasks') }}" class="focus-back-link">&larr; Back to Dashboard</a>
+        <a href="{{ url_for('hub.focus_setup') }}" class="focus-back-link">&larr; Back to Dashboard</a>
     </div>
 
 </div>
