--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,7 +25,7 @@
         <nav>
             <a href="/hub/tasks">Tasks</a> |
             <s><a href="#" >Notes</a></s> |
-            <s><a href="#">Timer</a></s>
+            <a href="/hub/focus_setup">Focus</a>
         </nav>
         <hr>
     </header>
